--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -16,46 +16,62 @@
 						<div class="col-8 col-12-medium imp-medium" >
 						<blockquote style="padding:0; margin-left: 10em;"><h4>　고객게시판 > 작성한 글</h4></blockquote><br/>
 							<section>
-								<form action="/mypage/mylist" method="get">
-									<div class="row gtr-uniform gtr-50" style="margin-left:15em; width:1400px;">
+								<!--<form th:action="/board" method="post">-->
+									<div class="row gtr-uniform gtr-50" style="margin-left:12em; width:1400px;">
+										<form id="delOk" action="/board/delete" method="post">
+											<input type="hidden" id="boardId" name="boardId" th:value="${boardVO.boardId}"/>
+										</form>
 										<section>
 											<div class="table-wrapper">
-												<table class="alt" style="width:830px;">
+												<table class="alt" style="width:820px;">
 													<tbody>
 														<tr>
 															<td style="background:#322f30;text-align:center;">카테고리</td>
-															<td style="background:#2d2f32;">　　　　　　</td>
-															<td style="background:#322f30;text-align:center;">작성자</td>
-															<td style="background:#2d2f32;">워니</td>
+															<td style="background:#2d2f32;" th:text="${detail.category}"></td>
+															<td style="background:#322f30;text-align:center;" >작성자</td>
+															<td style="background:#2d2f32;" th:text="${detail.name}"></td>
+															<td colspan="2" style="background:#322f30;text-align:center;" >등록일</td>
+															<td style="background:#2d2f32;" th:text="${#dates.format(detail.regdate,'yyyy-MM-dd')}"></td>
+														</tr>
+														<tr>
 															<td style="background:#322f30;text-align:center;">첨부파일</td>
-															<td colspan="2" style="background:#2d2f32;">없음</td>
+															<td colspan="3" style="background:#2d2f32;" th:each="file : ${detail.fileList}" >
+																<div th:if="${file.fileId!=null}">
+																	<a th:href="@{'/download/' + ${file.fileId}}">
+																		<strong th:text="${file.fileOriginName}"></strong>
+																	</a>
+																	<span style="font-size:0.9em;" th:text="' ,  size : ' + ${file.size} + 'kb'"></span>
+																</div>
+															</td>
+															<td colspan="2" style="background:#322f30;text-align:center;" >조회수</td>
+															<td style="background:#2d2f32;" th:text="${detail.hit}"></td>
 														</tr>
 														<tr>
 															<td style="background:#322f30;text-align:center;">제목</td>
-															<td colspan="6" style="text-align:center;background:#2d2f32;">카피바라여</td>
+															<td colspan="6" style="text-align:center;background:#2d2f32;" th:text="${detail.title}"></td>
 														</tr>
 														<tr>
 															<td style="background:#322f30;text-align:center;">내용</td>
-															<td colspan="6" style="text-align:center;height:20em;background:#2d2f32;">영원하라!!!!</td>
+															<td colspan="6" style="text-align:center;height:20em;background:#2d2f32;" th:text="${detail.content}"></td>
 														</tr>
 													</tbody>
 												</table>
 											</div>
 										</section>
 										<div class="col-6 col-12-medium">
-											<input type="checkbox" id="pub" name="pub" checked>
+											<input type="checkbox" id="pub" name="pub" th:checked="${detail.pubYn}=='N'">
 											<label for="pub">비공개</label>
 										</div><br/><br/><br/><br/>
 
 										<div class="col-12">
 											<ul class="actions" style="margin-left:10em;">
-												<li><input type="submit" value="수정" name="write" class="button primary small" /></li>
-												<li><input type="submit" value="삭제" name="write" class="button primary small" onclick="confirm('삭제하시겠습니까?')"/></li>
+												<li><a th:href="@{/board/update(boardId=${boardVO.boardId})}" class="button primary small">수정</a></li>
+												<li><input type="submit" value="삭제" class="button primary small" th:onclick="delOk();"/></li>
 												<li><a href="/board" class="button small">목록</a></li>
 											</ul>
 										</div>
 									</div>
-								</form>
+								<!--</form>-->
 							</section>
 							<hr style="height:3px;background:#ccc;width:80%;margin-left:9em;"/><br/>
 							<section style="width:70%;margin-left:12em;">
@@ -79,11 +95,17 @@
 							<tbody>
 							<tr>
 								<th>▲ 다음글</th>
-								<td colspan="3">다음글이 없습니다.</td>
+								<td colspan="3">
+									<a th:if="${next != null}" th:href="@{/board/detail(boardId=${next.boardId})}" th:text="${next.title}"></a>
+									<span th:if="${next == null}" th:text="'다음글이 없습니다.'"></span>
+								</td>
 							</tr>
 							<tr>
 								<th>▼ 이전글</th>
-								<td colspan="3"><a href="">이전글이 보여지는 영역입니다.</a></td>
+								<td colspan="3">
+									<a th:if="${prev != null}" th:href="@{/board/detail(boardId=${prev.boardId})}" th:text="${prev.title}"></a>
+									<span th:if="${prev == null}" th:text="'이전글이 없습니다.'"></span>
+								</td>
 							</tr>
 							</tbody>
 							</table>
@@ -93,6 +115,18 @@
 				</div>
 
 			<!-- Footer -->
+
+			<th:block layout:fragment="script">
+			<script th:inline="javascript">
+				function delOk(){
+					 if ( !confirm('게시글을 삭제하시겠습니까?') ) {
+						return false;
+					 }
+
+					  document.getElementById('delOk').submit();
+				}
+			</script>
+			</th:block>
 
 		</div>
 	</body>
